--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,12 @@
       "type": "chrome",
       "request": "launch",
       "preLaunchTask": "npm: start",
-      "url": "http://localhost:4200/"
+      "url": "http://localhost:4200/",
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/**",
+        "!**/node_modules/**"
+      ],
+      "webRoot": "${workspaceFolder}",
     },
     {
       "name": "ng test",
