--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^17.2.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "jquery": "^3.7.1",
+    "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "primeng": "^17.14.1",
     "rxjs": "~7.8.0",
